<resources>
    <!-- The name of our app -->
    <string name="app_name">Crypto Robo Advisor</string>

    <!-- Open/Close drawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Fragment headers -->
    <string name="portfolio">Portfolio</string>
    <string name="risk_manager">Risk Management</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>

    <!-- Sample messages -->
    <string name="message1">First messasge</string>
    <string name="message2">Second message</string>
    <string name="message3">Third message</string>
    <string name="message4">Fourth message</string>

    <!-- Sample weighted crypto -->
    <string name="eth_weight">ETH: 30%</string>
    <string name="bat_weight">BAT: 20%</string>
    <string name="btc_weight">BTC: 40%</string>
    <string name="rpx_weight">RPX: 10%</string>

    <!-- Notification Options -->
    <string name="earnings_notifications">Earnings Notifications</string>
    <string name="risk_notifications">Risk Notifications</string>
    <string name="news_updates_notifications">News and Updates</string>

    <!-- Settings -->
    <string name="change_name">Change Name</string>
    <string name="retake_questionnaire">Retake Questionnaire</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="change_password">Change Password</string>
    <string name="night_mode">Night Mode</string>

    <!-- Risk Levels -->
    <string name="current">Your current Risk Level is: </string>
    <string name="low_risk">Low</string>
    <string name="medium_risk">Medium</string>
    <string name="high_risk">High</string>
    <string name="mock_description">Blah blah blah blah blah blah blah...</string>

</resources>

