<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/main_bg">

        <ImageView
            android:id="@+id/graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="70dp"
            app:srcCompat="@drawable/graph" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="32dp"
            android:textColor="@color/white"
            android:text="$2490.00"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@android:drawable/sym_action_email" />

            <TextView
                android:id="@+id/message1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="@string/message1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp">

            <ImageButton
                android:id="@id/imageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@android:drawable/sym_action_email" />

            <TextView
                android:id="@id/message1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="@string/message2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp">

            <ImageButton
                android:id="@id/imageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@android:drawable/sym_action_email" />

            <TextView
                android:id="@id/message1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="@string/message3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="25dp">

            <ImageButton
                android:id="@id/imageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@android:drawable/sym_action_email" />

            <TextView
                android:id="@id/message1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="@string/message4" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>