<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:orientation="vertical"
        android:id="@+id/flcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="70dp"
            app:srcCompat="@drawable/graph" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="32dp"
            android:textColor="@color/white"
            android:text="$2490.00"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@android:drawable/sym_action_email" />

            <TextView
                android:id="@+id/message1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="@string/message1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp">

            <ImageButton
                android:id="@id/imageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@android:drawable/sym_action_email" />

            <TextView
                android:id="@id/message1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="@string/message2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp">

            <ImageButton
                android:id="@id/imageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@android:drawable/sym_action_email" />

            <TextView
                android:id="@id/message1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="@string/message3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="25dp">

            <ImageButton
                android:id="@id/imageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@android:drawable/sym_action_email" />

            <TextView
                android:id="@id/message1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="@string/message4" />
        </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        app:headerLayout="@layout/header"
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:itemTextColor="@color/darkgray"
        app:itemIconTint="@color/darkgray"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>